// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cell > Cell groupVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--card"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-service"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M2 11C2 5.47715 6.47715 1 12 1C17.5228 1 22 5.47715 22 11V16.1538C22 17.7996 20.58 19 19 19H16V11H20C20 6.58172 16.4183 3 12 3C7.58172 3 4 6.58172 4 11H8V19H6.06301C6.28503 19.8626 7.06808 20.5 8 20.5H9.56367C9.87991 20.0466 10.4053 19.75 11 19.75H13C13.9665 19.75 14.75 20.5335 14.75 21.5C14.75 22.4665 13.9665 23.25 13 23.25H11C10.4053 23.25 9.87991 22.9534 9.56367 22.5H8C5.90559 22.5 4.18714 20.8903 4.0143 18.8406C2.87438 18.4625 2 17.4453 2 16.1538V11ZM6 17V13H4V16.1538C4 16.5473 4.37084 17 5 17H6ZM20 13H18V17H19C19.6292 17 20 16.5473 20 16.1538V13Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-internet"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M3.05493 11C3.45261 7.40254 5.97062 4.44413 9.33156 3.40217C8.00851 5.65483 7.1892 8.23957 7.02895 11H3.05493ZM10.9922 1.04555C5.38944 1.55442 1 6.26461 1 12C1 17.7354 5.3894 22.4455 10.9922 22.9545L11 22.9643L11.4254 22.9853C11.4932 22.9887 11.5611 22.9916 11.6292 22.9939C11.7523 22.9979 11.8759 23 12 23C12.1187 23 12.2369 22.9981 12.3546 22.9944C12.4281 22.9921 12.5015 22.989 12.5746 22.9853L13 22.9643L13.0078 22.9545C18.6106 22.4455 23 17.7354 23 12C23 6.26461 18.6106 1.55443 13.0078 1.04555L12.9999 1.03571L12.5736 1.0147C12.4767 1.00972 12.3795 1.006 12.2819 1.00354C12.1882 1.00119 12.0942 1 12 1C11.9051 1 11.8104 1.0012 11.7161 1.00359C11.6192 1.00605 11.5226 1.00976 11.4263 1.0147L11.0001 1.03571L10.9922 1.04555ZM12.0011 3C13.6972 5.25767 14.7704 8.00828 14.9672 11H9.03278C9.22955 8.00828 10.3028 5.25767 11.9989 3C11.9992 3 11.9996 3 12 3C12.0004 3 12.0008 3 12.0011 3ZM7.02894 13C7.18917 15.7604 8.00847 18.3452 9.3315 20.5978C5.97059 19.5558 3.45261 16.5974 3.05493 13H7.02894ZM11.9988 21C10.3028 18.7423 9.22953 15.9917 9.03277 13H14.9672C14.7705 15.9917 13.6972 18.7423 12.0012 21C12.0008 21 12.0004 21 12 21C11.9996 21 11.9992 21 11.9988 21ZM14.6685 20.5978C15.9915 18.3452 16.8108 15.7604 16.9711 13H20.9451C20.5474 16.5974 18.0294 19.5558 14.6685 20.5978ZM16.9711 11C16.8108 8.23957 15.9915 5.65483 14.6684 3.40217C18.0294 4.44413 20.5474 7.40254 20.9451 11H16.9711Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Cell > Cell mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-f4324ab6=""
>
  <h1
    class="title"
    data-v-f4324ab6=""
  >
    Cell 单元格
  </h1>
  <p
    class="summary"
    data-v-f4324ab6=""
  >
    一行内容/功能的垂直排列方式。一行项目左侧为主要内容展示区域，右侧可增加更多操作内容
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-f4324ab6=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--default t-cell-group--bordered"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <span
                  class="t-cell--required"
                >
                   *
                </span>
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                >
                  16
                </div>
              </div>
              
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-switch t-switch--medium t-switch--checked"
              >
                <div
                  class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
                >
                  <div
                    class="t-switch__label t-switch__label--medium t-switch__label--checked"
                  >
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-f4324ab6=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--default"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <span
                  class="t-cell--required"
                >
                   *
                </span>
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                >
                  16
                </div>
              </div>
              
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-switch t-switch--medium t-switch--checked"
              >
                <div
                  class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
                >
                  <div
                    class="t-switch__label t-switch__label--medium t-switch__label--checked"
                  >
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
                    fill="currentColor"
                  />
                </svg>
                
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
              </div>
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                多行高度不定，长文本自动换行，该选项的描述是一段很长的内容
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
              </div>
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <div
                  class="t-avatar__wrapper"
                >
                  <div
                    class="t-avatar__badge"
                  >
                    <div
                      class="t-badge"
                    >
                      <div
                        class="t-badge__content"
                      >
                        
                        <div
                          class="t-avatar t-avatar--medium t-avatar--circle"
                        >
                          <div
                            class="t-image t-image--square"
                          >
                            <div
                              class="t-image__mask"
                            >
                              <div
                                class="t-loading"
                                style="font-size: 20px;"
                              >
                                <div
                                  class="t-loading__dots"
                                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                                >
                                  
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0s;"
                                  />
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                                  />
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                                  />
                                  
                                </div>
                                <!---->
                                <!---->
                              </div>
                            </div>
                            <picture>
                              <!---->
                              <img
                                alt=""
                                class="t-image__img"
                                src="https://tdesign.gtimg.com/mobile/demos/avatar1.png"
                                style="object-fit: fill; object-position: center;"
                              />
                            </picture>
                          </div>
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
                
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <img
                class="t-cell__left-image"
                src="https://tdesign.gtimg.com/mobile/demos/example4.png"
              />
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <!---->
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f4324ab6=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        卡片单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-f4324ab6=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--card"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-service"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M2 11C2 5.47715 6.47715 1 12 1C17.5228 1 22 5.47715 22 11V16.1538C22 17.7996 20.58 19 19 19H16V11H20C20 6.58172 16.4183 3 12 3C7.58172 3 4 6.58172 4 11H8V19H6.06301C6.28503 19.8626 7.06808 20.5 8 20.5H9.56367C9.87991 20.0466 10.4053 19.75 11 19.75H13C13.9665 19.75 14.75 20.5335 14.75 21.5C14.75 22.4665 13.9665 23.25 13 23.25H11C10.4053 23.25 9.87991 22.9534 9.56367 22.5H8C5.90559 22.5 4.18714 20.8903 4.0143 18.8406C2.87438 18.4625 2 17.4453 2 16.1538V11ZM6 17V13H4V16.1538C4 16.5473 4.37084 17 5 17H6ZM20 13H18V17H19C19.6292 17 20 16.5473 20 16.1538V13Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-internet"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M3.05493 11C3.45261 7.40254 5.97062 4.44413 9.33156 3.40217C8.00851 5.65483 7.1892 8.23957 7.02895 11H3.05493ZM10.9922 1.04555C5.38944 1.55442 1 6.26461 1 12C1 17.7354 5.3894 22.4455 10.9922 22.9545L11 22.9643L11.4254 22.9853C11.4932 22.9887 11.5611 22.9916 11.6292 22.9939C11.7523 22.9979 11.8759 23 12 23C12.1187 23 12.2369 22.9981 12.3546 22.9944C12.4281 22.9921 12.5015 22.989 12.5746 22.9853L13 22.9643L13.0078 22.9545C18.6106 22.4455 23 17.7354 23 12C23 6.26461 18.6106 1.55443 13.0078 1.04555L12.9999 1.03571L12.5736 1.0147C12.4767 1.00972 12.3795 1.006 12.2819 1.00354C12.1882 1.00119 12.0942 1 12 1C11.9051 1 11.8104 1.0012 11.7161 1.00359C11.6192 1.00605 11.5226 1.00976 11.4263 1.0147L11.0001 1.03571L10.9922 1.04555ZM12.0011 3C13.6972 5.25767 14.7704 8.00828 14.9672 11H9.03278C9.22955 8.00828 10.3028 5.25767 11.9989 3C11.9992 3 11.9996 3 12 3C12.0004 3 12.0008 3 12.0011 3ZM7.02894 13C7.18917 15.7604 8.00847 18.3452 9.3315 20.5978C5.97059 19.5558 3.45261 16.5974 3.05493 13H7.02894ZM11.9988 21C10.3028 18.7423 9.22953 15.9917 9.03277 13H14.9672C14.7705 15.9917 13.6972 18.7423 12.0012 21C12.0008 21 12.0004 21 12 21C11.9996 21 11.9992 21 11.9988 21ZM14.6685 20.5978C15.9915 18.3452 16.8108 15.7604 16.9711 13H20.9451C20.5474 16.5974 18.0294 19.5558 14.6685 20.5978ZM16.9711 11C16.8108 8.23957 15.9915 5.65483 14.6684 3.40217C18.0294 4.44413 20.5474 7.40254 20.9451 11H16.9711Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Cell > Cell multipleVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--default"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <span
            class="t-cell--required"
          >
             *
          </span>
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
          >
            16
          </div>
        </div>
        
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium t-switch--checked"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium t-switch__label--checked"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        辅助信息
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
              fill="currentColor"
            />
          </svg>
          
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          多行高度不定，长文本自动换行，该选项的描述是一段很长的内容
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--medium t-avatar--circle"
                  >
                    <div
                      class="t-image t-image--square"
                    >
                      <div
                        class="t-image__mask"
                      >
                        <div
                          class="t-loading"
                          style="font-size: 20px;"
                        >
                          <div
                            class="t-loading__dots"
                            style="animation-duration: 800ms; width: 20px; height: 20px;"
                          >
                            
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0s;"
                            />
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                            />
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                            />
                            
                          </div>
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <picture>
                        <!---->
                        <img
                          alt=""
                          class="t-image__img"
                          src="https://tdesign.gtimg.com/mobile/demos/avatar1.png"
                          style="object-fit: fill; object-position: center;"
                        />
                      </picture>
                    </div>
                  </div>
                  
                </div>
                <!---->
              </div>
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <img
          class="t-cell__left-image"
          src="https://tdesign.gtimg.com/mobile/demos/example4.png"
        />
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Cell > Cell singleVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--default t-cell-group--bordered"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <span
            class="t-cell--required"
          >
             *
          </span>
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
          >
            16
          </div>
        </div>
        
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium t-switch--checked"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium t-switch__label--checked"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        辅助信息
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M17.5 3.5C15.8431 3.5 14.5 4.84315 14.5 6.5C14.5 8.15685 15.8431 9.5 17.5 9.5C19.1569 9.5 20.5 8.15685 20.5 6.5C20.5 4.84315 19.1569 3.5 17.5 3.5ZM12.5 6.5C12.5 3.73858 14.7386 1.5 17.5 1.5C20.2614 1.5 22.5 3.73858 22.5 6.5C22.5 9.26142 20.2614 11.5 17.5 11.5C14.7386 11.5 12.5 9.26142 12.5 6.5ZM2 2H11V11H2V2ZM4 4V9H9V4H4ZM2 13H11V22H2V13ZM4 15V20H9V15H4ZM13 13H22V22H13V13ZM20 15H15V20H20V15Z"
              fill="currentColor"
            />
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M8.08594 17.5L13.5859 12L8.08594 6.50003L9.50015 5.08582L16.4144 12L9.50015 18.9142L8.08594 17.5Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
